# simple-3d-viewer

./: .gitignore  CMakeLists.txt  README.md  valgrind.supp
assets/shader/: fragment.glsl  vertex.glsl
dependencies/cutil/: CMakeLists.txt
dependencies/cutil/include/cutil/: filebrowser.h  hashTable.h  hash_table.h  list.h  sort.h
dependencies/cutil/source/: filebrowser.c  hashTable.c  hash_table.c  list.c
dependencies/cutil/tests/: CMakeLists.txt  filesystem.c  hash_table.c
dependencies/cvec/: CMakeLists.txt
dependencies/cvec/include/cvec/: mat4.h  vec3.h
dependencies/cvec/source/: mat4.c  vec3.c
dependencies/cvec/tests/: mat4.c  vec2.c
dependencies/nuklear/: nuklear.h
include/s3v/: color.h  context.h  keyboard.h  mesh.h  mouse.h  renderer.h  s3v.h  shader.h  ui.h  window.h
source/: color.c  keyboard.c  main.c  mesh.c  mouse.c  renderer.c  s3v.c  shader.c  ui.c  window.c
